--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -226,6 +226,10 @@
     margin-top: 0;
   }
 
+  .media,.media-body {
+    overflow: visible;
+  }
+
   .media-body {
     font-size: 12px;
     line-height: 16px;
@@ -300,13 +304,15 @@
 }
 
 .advert-user {
-  .media-body {
-    line-height: 32px;
+  line-height: 32px;
+  img {
+    margin-right: 10px;
   }
 
   time {
     color: #aaa;
     font-size: 12px;
+    float: right;
   }
 }
 
