--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -192,6 +192,13 @@ a.realname, a.username {
   }
 }
 
+.card-user {
+  margin-top: 10px;
+  img {
+    float: left;
+  }
+}
+
 // @media screen and (max-width: @screen-phone) {
 //   #user-profile {
 //     margin-left: 0;
