--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -167,10 +167,7 @@
             </div>
             <div class="site-sidebar">
               {% block sidebar %}
-              <div class="site-aside">
-                <h2>Trending</h2>
-                <img class="side-trending-img" src="http://adstacy.dev/app_dev.php/media/cache/thumbnail/uploads/5270a78865a64.jpeg" />
-              </div>
+              {{ render_sidebar_trending() }}
               <div id="side-suggest-friend" class="site-aside">
                 <h2>People You May Know</h2>
                 <div class="media">
