--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -1,4 +1,4 @@
-.site-sidebar {
+#sidebar {
   .site-aside {
     margin-bottom: 20px;
   }
@@ -25,23 +25,24 @@
     vertical-align: top;
     width: 250px;
   }
+}
+#side-suggest-friend {
+  img {
+    width: 48px;
+    height: 48px;
+  }
 
-  #side-suggest-friend {
-    img {
-      width: 48px;
-      height: 48px;
-    }
+  .realname {
+    color: #333;
+    font-size: 13px;
+    margin-bottom: 5px;
+  }
 
-    .username {
-      color: #333;
-      display: block;
-      font-size: 13px;
-      margin-bottom: 5px;
-    }
-
-    .btn-sm {
-      font-size: 11px;
-      padding: 2px 10px;
-    }
+  .btn-sm {
+    font-size: 11px;
+    padding: 2px 10px;
+  }
+  .media, .media-body {
+    overflow: visible;
   }
 }
