--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -165,7 +165,7 @@
 
               {% block content %}{% endblock %}
             </div>
-            <div id="sidebar" class="site-sidebar">
+            <div id="sidebar" class="site-sidebar fade-hover">
               {% block sidebar %}
               {{ render_sidebar_trending() }}
               {% endblock %}
