--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -44,3 +44,10 @@ span.required {
   text-align: center;
   font-size: 30px;
 }
+
+.fade-hover {
+  opacity: 0.5;
+  &:hover {
+    opacity: 1
+  }
+}
