Remove sidebar if mobile.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -165,11 +165,13 @@
 
               {% block content %}{% endblock %}
             </div>
+            {% if not is_mobile() %}
             <div id="sidebar" class="site-sidebar fade-hover">
               {% block sidebar %}
               {{ render_sidebar_trending() }}
               {% endblock %}
             </div>
+            {% endif %}
           </div>
         </div>
       {% endblock %}
