--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -195,8 +195,10 @@ a.realname, a.username {
 
 .card-user {
   margin-top: 10px;
+  margin-bottom: 10px;
   img {
     float: left;
+    margin-right: 10px;
   }
 }
 
