--- a/src/Adstacy/AppBundle/Resources/public/css/hovercard.css
+++ b/src/Adstacy/AppBundle/Resources/public/css/hovercard.css
@@ -4,7 +4,7 @@
 .hc-pic { width:70px; margin-top:-1em; float:right;  }
 .hc-details-open-left { left: auto; right:-10px; text-align:right; margin-left:80px; margin-right:0; }
 .hc-details-open-left > .hc-pic { float:left; }
-.hc-details-open-top { bottom:-10px; top:auto; padding: 10px 10px 2em;}
+.hc-details-open-top { bottom:-10px; top:auto; padding: 0 10px 2.5em;}
 .hc-details-open-top > .hc-pic { margin-top:10px; float:right;  }
 .hc-details .s-action{ position: absolute; top:8px; right:5px; }
 .hc-details .s-card-pad{ border-top: solid 1px #eee; margin-top:10px; padding-top:10px; overflow:hidden; }
