--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -31,7 +31,7 @@
       </div>
     {% elseif ad.type == 'youtube' %}
       <div class="advert-video" data-youtube-id="{{ ad.youtubeId }}">
-        <a href="#">
+        <a href="javascript:;">
           <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
             data-original="http://img.youtube.com/vi/{{ ad.youtubeId }}/0.jpg"
             width="{{ thumb_width }}" height="{{ thumb_width * (9/16) }}"
