--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -202,6 +202,19 @@ a.realname, a.username {
   }
 }
 
+.user-mini {
+  img {
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+  }
+  padding: 5px 0;
+  border-bottom: 1px solid #ccc;
+}
+.user-mini:first-child {
+  border-top: 1px solid #ccc;
+}
+
 // @media screen and (max-width: @screen-phone) {
 //   #user-profile {
 //     margin-left: 0;
