Fix trending image size.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -11,9 +11,6 @@
     padding-bottom: 5px;
   }
 
-  .side-trending-img {
-    width: 250px;
-  }
   .side-advert-text {
     background-color: #333;
     border: 1px solid #ddd;
@@ -24,6 +21,17 @@
     padding: 8px;
     vertical-align: top;
     width: 250px;
+  }
+}
+#sidebar-trending {
+  img {
+    max-width: 260px;
+  }
+  .sidebar-trending-img {
+    background-color: #000;
+    max-width: 260px;
+    max-height: 260px;
+    text-align: center;
   }
 }
 #side-suggest-friend {
