Style advert-desc

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -71,3 +71,4 @@
 @import (less) "../css/mention.css";
 @import (less) "../css/adstacy.css";
 @import (less) "../css/hovercard.css";
+@import (less) "../css/wysiwyg-styles.css";
