advert expander now recalculate when resize and orientation changed.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -104,7 +104,11 @@
 .advert-text {
   background: #333;
   color: #fff !important;
-  padding: 15px;
+
+  .advert-text-content {
+    padding: 15px;
+  }
+
   h3 {
     text-align: center;
     margin: 0 0 15px 0;
