Make sidebar trending as link.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -27,8 +27,16 @@
   img {
     max-width: 260px;
   }
-  .sidebar-trending-img {
+  .sidebar-trending-img, .sidebar-trending-youtube, .sidebar-trending-text {
+    display: block;
     background-color: #000;
+  }
+  .sidebar-trending-text {
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+  }
+  .sidebar-trending-img {
     max-width: 260px;
     max-height: 260px;
     text-align: center;
