--- a/src/Adstacy/AppBundle/Resources/views/App/sidebar_trending.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/sidebar_trending.html.twig
@@ -7,17 +7,17 @@
         {% set height = small_thumb_size %}
       {% endif %}
       {% set width = ad.imageWidth(height) %}
-      <div class="sidebar-trending-img">
+      <a class="sidebar-trending-img" href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
         <img src="{{ vich_uploader_asset(ad, 'image')|imagine_filter('small_thumb') }}" width="{{ width }}" height="{{ height }}">
-      </div>
+      </a>
     {% elseif ad.type == 'text' %}
-      <div class="sidebar-trending-text">
+      <a class="sidebar-trending-text" href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
         <h3>{{ ad.title }}</h3>
-      </div>
+      </a>
     {% elseif ad.type == 'youtube' %}
-      <div class="sidebar-trending-youtube">
+      <a class="sidebar-trending-youtube" href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
         <img src="http://img.youtube.com/vi/{{ ad.youtubeId }}/0.jpg">
-      </div>
+      </a>
     {% endif %}
   </div>
 {% endif %}
