Fix some margins.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -3,14 +3,11 @@
 
 .advert {
   background: #fff;
-  margin: 30px auto 0;
+  margin: 0 auto 30px;
   border: 1px solid @border-color;
   border-radius: 5px;
   box-shadow: 0 0 1px #aaa;
 
-  &:first-child {
-    margin-top: 0;
-  }
   .dropdown-menu {
     border-right: 0;
     min-width: initial;
