Fix follow/unfollow button.

--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -40,7 +40,7 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('.jscroll').jscroll(Adstacy.options.jscrollAd);
+      $('.jscroll').jscroll(Adstacy.options.jscrollUser);
     });
   </script>
 {% endblock %}
