Add link to sidebar.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -5,10 +5,16 @@
 
   h2 {
     border-bottom: 1px solid #d5d5d5;
-    color: #555;
     font-size: 20px;
     margin-top: 0;
     padding-bottom: 5px;
+    a {
+      color: #555;
+      text-decoration: none;
+      &:hover {
+        color: #b00;
+      }
+    }
   }
 
   .side-advert-text {
