--- a/src/Adstacy/AppBundle/Resources/views/App/sidebar_trending.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/sidebar_trending.html.twig
@@ -1,6 +1,6 @@
 {% if ad %}
   <div id="sidebar-trending" class="site-aside">
-    <h2>Trending</h2>
+    <h2><a href="{{ path('adstacy_app_trending') }}">Trending</a></h2>
     {% if ad.type == 'image' %}
       {% set height = ad.imageHeight %}
       {% if height >= small_thumb_size %}
