Fix site-header username margin.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -109,9 +109,10 @@ body {
     font-size: 13px;
     font-weight: bold;
     display: block;
-  }
-  .username:hover {
-    color: #333;
+    margin-bottom: 3px;
+    &:hover {
+      color: #333;
+    }
   }
 }
 
