Fixed responsiveness on follow user suggestion and find friends.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
@@ -1,7 +1,9 @@
 #who-to-follow {
-  width: 500px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   .toolbar {
-    border-radius: 3px 3px 0 0;
+    border-radius: 5px 5px 0 0;
     border-bottom: 1px solid #ddd;
     background-color: #fff;
     margin-bottom: 5px;
@@ -14,8 +16,9 @@
   }
   .adstacy {
     border-right: 1px solid #ddd;
+    border-radius: 4px 0 0 0;
     color: #b00;
-    width: 166px;
+    width: 30%;
     &.current {
       background: #b00;
       color: #fff;
@@ -24,15 +27,16 @@
   .facebook {
     border-right: 1px solid #ddd;
     color: #133783;
-    width: 168px;
+    width: 38%;
     &.current {
       background: #133783;
       color: #fff;
     }
   }
   .twitter {
+    border-radius: 0 0 0 4px;
     color: #0271bf;
-    width: 166px;
+    width: 32%;
     &.current {
       background: #0271bf;
       color: #fff;
