--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -2,11 +2,11 @@
 
 {% block title %}Your Ads Stream | Adstacy{% endblock %}
 
-{% block site_body_class %}{% if user.followingsCount > 0 %}site-body-no-bg{% else %}site-body-bg{% endif %}{% endblock %}
+{% block site_body_class %}site-body-no-bg{% endblock %}
 
 {% block content %}
   {% if user.followingsCount <= 0 %}
-    <div class="clearfix users no-border">
+    <div class="adstacy-container clearfix users">
       <h2>{{"who_to_follow_getting_started"|trans}}</h2>
       {{ block('ajax_content') }}
     </div>
