--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -192,6 +192,10 @@
         '@AdstacyAppBundle/Resources/public/js/perfect-scrollbar.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.hovercard.js'
         'bundles/funddyjstranslations/js/lib/funddytranslations.js'
+      %}
+        <script src="{{ asset_url }}" type="text/javascript"></script>
+      {% endjavascripts %}
+      {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/templates.js'
         '@AdstacyAppBundle/Resources/public/js/adstacy.js'
         '@AdstacyAppBundle/Resources/public/js/app/*'
