Add border-radius to advert-object

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -23,6 +23,7 @@
   overflow: hidden;
   max-height: 9999px;
   background: #000 url("../img/loader.gif") no-repeat center;
+  border-radius: 5px 5px 0 0;
   .transition(max-height ease .2s);
 
   &:hover .advert-expand {
