Add hover to sidebar text.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -41,6 +41,9 @@
     padding: 10px;
     text-decoration: none;
     color: #fff;
+    &:hover {
+      background: #333;
+    }
   }
   .sidebar-trending-img {
     max-width: 260px;
