--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -195,7 +195,7 @@
           </div>
           <div class="comment-body">
             <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
-              <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
+              <textarea name="comment[content]" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
               <input type="submit" value="{{"comment"|trans}}" class="hide">
             </form>
           </div>
