fix border-radius on advert.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -167,7 +167,7 @@ body {
   .navbar-right {
     .icon {
       font-size: 16px;
-      padding: 0 2px;
+      // padding: 0 2px;
     }
   }
   .nav > li {
