--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -21,9 +21,8 @@
 @border-secondary:            #ccc;
 @border-color:                #ccc;
 
-// @border-radius-base:          0;
-// @border-radius-large:         0;
-// @border-radius-small:         0;
+@border-radius-base:             5px;
+@border-radius-small:            4px;
 
 // Color accent
 @green-accent:                #67e300;
