--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -5,7 +5,7 @@
   background: #fff;
   margin: 0 auto 30px;
   border: 1px solid @border-color;
-  border-radius: 5px;
+  border-radius: @border-radius-large;
   box-shadow: 0 0 1px #aaa;
 
   .dropdown-menu {
@@ -23,7 +23,7 @@
   overflow: hidden;
   max-height: 9999px;
   background: #000 url("../img/loader.gif") no-repeat center;
-  border-radius: 5px 5px 0 0;
+  .border-top-radius(@border-radius-base);
   .transition(max-height ease .2s);
 
   &:hover .advert-expand {
@@ -67,15 +67,13 @@
 }
 
 .advert-img {
-  border-radius: 5px 5px 0 0;
-
   img {
     .img-responsive(block);
     margin: 0 auto;
   }
 
   img.full {
-    border-radius: 5px 5px 0 0;
+    .border-top-radius(@border-radius-base);
   }
 }
 
