--- a/src/Adstacy/NotificationBundle/Resources/views/show_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/show_notifications.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block site_body_class %}site-body-bg site-body-full{% endblock %}
+{% block site_body_class %}site-body-bg{% endblock %}
 
 {% block content %}
   {{ render_all_notification() }}
