--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -4,9 +4,9 @@
 
 .panel-heading {
   h2 {
-    margin: 5px;
+    margin: 10px 0;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 300;
   }
   h3 {
     margin: 5px;
