--- a/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
@@ -23,6 +23,8 @@
         cursor: pointer;
         color: #777;
         margin-right: 5px;
+        font-weight: bold;
+        font-size: 16px;
       }
     }
   }
